--- a/styles/globals.css
+++ b/styles/globals.css
@@ -58,3 +58,20 @@ body {
   margin: 8px 0 0 20px;
   text-align: left;
 }
+
+.video-container {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  padding-top: 56.25%;
+}
+
+.responsive-iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+}
