--- a/styles/globals.css
+++ b/styles/globals.css
@@ -75,3 +75,20 @@ body {
   width: 100%;
   height: 100%;
 }
+
+.thumbnail-wrapper {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+}
+
+.responsive-thumbnail {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 56.25%;
+}
